--- a/src/App.css
+++ b/src/App.css
@@ -232,8 +232,32 @@ body {
   scrollbar-width: 3px; /* Firefox */
   overflow: -moz-scrollbars-none;
 }
-.scroller::-webkit-scrollbar {
-  width: 3px;
+
+.hScroller::-webkit-scrollbar {
+  height: 3px;
+    
+  
+}
+.hScroller {
+    
+  width: 100%;
+  overflow-x: scroll; /* Add the ability to scroll */
+}
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .hScroller::-webkit-scrollbar {
+      display: none;
+      width: 0 !important;
+  }
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hScroller {
+  -ms-overflow-style: none; /* IE and Edge */
+  /* scrollbar-width: 3px; Firefox */
+  overflow: -moz-scrollbars-none;
+}
+.hScroller::-webkit-scrollbar {
+  height: 3px;
     
   
 }
